# pacioli

./: .gitignore  README.md  go_cardless_client.py  pyproject.toml  read_existing_transactions.py  update_transactions.py
