[project]
name = "spending"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.1.0",
    "itables>=2.3.0",
    "jupyter>=1.1.1",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "qrcode[pil]>=8.1",
]
